Bug 1355566 - Make sure js::EnableContextProfilingStack(cx, false) is called before shutdown collection. r=njn

MozReview-Commit-ID: 6cPCSeTUdEP

--HG--
extra : rebase_source : 98b6617a3bab4698c03921d451052ff5177ad202